update doku
